code/19_sLDSC/ldsc_h2_jobs_snRNAseq.txt_err_out/jobs_12005151_38.err
Lmod has detected the following error: The following module(s) are unknown:
"conda_R/4.0"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "conda_R/4.0"

Also make sure that all modulefiles written in TCL start with the string
#%Module



  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
  File "/dcs04/lieber/shared/statsgen/LDSC/base/scripts/ldsc.py", line 84
    print msg
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
